--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,12 @@
     ],
     "require": {},
     "autoload": {
-        "psr-4":{
-            "Framework\\":"src/Framework",
-            "App\\":"src/App"
-        }
+        "psr-4": {
+            "Framework\\": "src/Framework",
+            "App\\": "src/App"
+        },
+        "files": [
+            "src/App/Config/Routes.php"
+        ]
     }
 }
