--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,11 @@
             "App\\": "src/App"
         },
         "files": [
-            "src/App/Config/Routes.php"
+            "src/App/Config/Routes.php",
+            "src/App/Config/Middleware.php"
         ]
+    },
+    "scripts": {
+        "phpiggy": "php cli.php"
     }
 }
